fix account dropdown spacing

--- a/frontend/src/components/Navigation/accountdropdown.css
+++ b/frontend/src/components/Navigation/accountdropdown.css
@@ -1,11 +1,24 @@
 .accountbutton {
-    
+    display: flex;
+    height: 50px;
+    /* justify-content: center; */
+    align-items: center;
+}
+
+.accountbuttontext {
+
 }
 
 .accountdropdown {
     color: black;
     display: none;
-    position: absolute
+    position: absolute;
+    top: 50px;
+    border: 3px solid black
+}
+
+.accountdropdown:hover {
+    display: flex
 }
 
 .accountbutton:hover > .accountdropdown {
